--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -6,5 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServerContext": "//Connections string//"
+  },
+  "AppURL": "//URL of the application domain on which it is located//",
+  "TokenSettings": {
+    "ISSUER": "//ISSUER//",
+    "AUDIENCE": "//AUDIENCE//",
+    "KEY": "//KEY (16 symbols)//"
+  },
+  "EmailConfig": {
+    "Provider": "//Email provider//",
+    "Port": /*Email provider port example Mailtrap*/ 2525,
+    "Username": "//Email provider username//",
+    "Password": "//Email provider password//",
+    "From": "//Who send message (email)//"
+  }
 }
