--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,9 +1,22 @@
 ﻿{
+  "ConnectionStrings:ServerContext": "Server=Pavlusha;Database=ChatDatabase;Trusted_Connection=True;",
+  "EmailConfig": {
+    "Provider": "smtp.mailtrap.io",
+    "Port": 2525,
+    "Username": "",
+    "Password": "",
+    "From": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "TokenSettings": {
+    "ISSUER": "http://localhost",
+    "AUDIENCE": "http://localhost",
+    "KEY": "Chat application"
   }
 }
