--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,9 +1,7 @@
 {
   "AllowedHosts": "*",
   "AppURL": "//URL of the application domain on which it is located//",
-  "ConnectionStrings": {
-    "ServerContext": "//Connections string//"
-  },
+  "ConnectionStrings:ServerContext": "Server=(localdb)\\mssqllocaldb;Database=ChatDatabase;Trusted_Connection=True;",
   "EmailConfig": {
     "Provider": "//Email provider//",
     "Port": /*Email provider port example Mailtrap*/ 2525,
