add logic for saving files change theme to material deisgh update form add list of users add tabs for settings

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AllowedHosts": "*",
-  "AppURL": "//URL of the application domain on which it is located//",
+  "AppURL": "http://localhost",
   "ConnectionStrings:ServerContext": "Server=(localdb)\\mssqllocaldb;Database=ChatDatabase;Trusted_Connection=True;",
   "EmailConfig": {
-    "Provider": "//Email provider//",
-    "Port": /*Email provider port example Mailtrap*/ 2525,
-    "Username": "//Email provider username//",
-    "Password": "//Email provider password//",
-    "From": "//Who send message (email)//"
+    "Provider": "smtp.mailtrap.io",
+    "Port": 2525,
+    "Username": "",
+    "Password": "",
+    "From": ""
   },
   "Logging": {
     "LogLevel": {
@@ -17,8 +17,8 @@
     }
   },
   "TokenSettings": {
-    "ISSUER": "//ISSUER//",
-    "AUDIENCE": "//AUDIENCE//",
-    "KEY": "//KEY (16 symbols)//"
+    "ISSUER": "http://localhost",
+    "AUDIENCE": "http://localhost",
+    "KEY": "Chat application"
   }
 }
